// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn should match snapshot 1`] = `
<div
  className="jsx-665481332 SignIn"
>
  <CloseButton />
  <withRouter(BackButton)
    text="Back"
  />
  <div
    className="jsx-665481332 picture"
  >
    <img
      alt="Help"
      className="jsx-665481332"
      src="https://images.kiwi.com/smart-faq/woman-with-laptop@2x.jpg"
    />
  </div>
  <div
    className="jsx-665481332 text"
  >
    <div
      className="jsx-665481332 title"
    >
      <Heading
        element="h1"
        size="large"
        weight="bold"
      >
        Sign in
      </Heading>
    </div>
    <Text
      align="left"
      element="p"
      italic={false}
      size="normal"
      type="secondary"
      uppercase={false}
      weight="regular"
    >
      We need you to sign in to provide you with more personalised help.
    </Text>
  </div>
  <div
    className="jsx-665481332 buttons"
  >
    <div
      className="jsx-665481332 googleButton"
    >
      <Button
        Facebook={true}
        Icon={[Function]}
        block={false}
        disabled={false}
        loading={false}
        onClick={[Function]}
        onlyIcon={false}
        size="normal"
        title="Continue with Google"
        type="google"
        variation="bordered"
        width={212}
      />
    </div>
    <Button
      Facebook={true}
      Icon={[Function]}
      block={false}
      className="facebook"
      disabled={false}
      loading={false}
      onClick={[Function]}
      onlyIcon={false}
      size="normal"
      title="Continue with Facebook"
      type="facebook"
      variation="filled"
      width={212}
    />
  </div>
  <div
    className="jsx-665481332 kiwi-account"
  >
    <Link
      replace={false}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/kiwi-login"
    >
      <Typography
        type="active"
      >
        I want to use my Kiwi.com account
      </Typography>
      <img
        alt="kiwi login"
        className="jsx-665481332 chevron"
        src="https://images.kiwi.com/smart-faq/chevron-right.png"
      />
    </Link>
  </div>
  <JSXStyle
    css=".SignIn.jsx-665481332{width:480px;padding-top:128px;padding-bottom:50px;}div.picture.jsx-665481332 img.jsx-665481332{width:203px;height:156px;}div.picture.jsx-665481332{margin:0px 127px 0px 150px;}div.text.jsx-665481332{margin:68px 40px 32.8px 40px;}.title.jsx-665481332{margin-bottom:8px;}.googleButton.jsx-665481332{margin-bottom:16px;}.buttons.jsx-665481332{margin-right:134px;margin-left:134px;margin-bottom:24px;}div.kiwi-account.jsx-665481332{margin-top:8px;text-align:center;}img.chevron.jsx-665481332{width:8px;height:8px;margin-left:5px;object-fit:contain;}@media only screen and (min-width:320px) and (max-width:480px){.SignIn.jsx-665481332{width:100%;padding-top:22px;}div.picture.jsx-665481332 img.jsx-665481332{display:none;}div.text.jsx-665481332{margin:64px 16px 33px 16px;}.buttons.jsx-665481332{margin-right:16px;margin-left:16px;}button.jsx-665481332{width:100%;margin-bottom:20px;}@media only screen and (width:320px){.SignIn.jsx-665481332{padding-top:0px;}}}"
    styleId="665481332"
  />
</div>
`;

exports[`SignIn should match snapshot with expired message 1`] = `
<div
  className="jsx-665481332 SignIn"
>
  <CloseButton />
  <withRouter(BackButton)
    text="Back"
  />
  <div
    className="jsx-665481332 picture"
  >
    <img
      alt="Help"
      className="jsx-665481332"
      src="https://images.kiwi.com/smart-faq/woman-with-laptop@2x.jpg"
    />
  </div>
  <div
    className="jsx-665481332 text"
  >
    <div
      className="jsx-665481332 title"
    >
      <Heading
        element="h1"
        size="large"
        weight="bold"
      >
        Sign in
      </Heading>
    </div>
    <Text
      align="left"
      element="p"
      italic={false}
      size="normal"
      type="secondary"
      uppercase={false}
      weight="regular"
    >
      We need you to sign in to provide you with more personalised help.
    </Text>
  </div>
  <div
    className="jsx-1781336386 infoMessage"
  >
    <SystemMessage
      Icon={[Function]}
      type="info"
    >
      Your last session has expired. Please sign in again.
    </SystemMessage>
    <JSXStyle
      css="div.infoMessage.jsx-1781336386{margin-bottom:15px;}"
      styleId="1781336386"
    />
  </div>
  <div
    className="jsx-665481332 buttons"
  >
    <div
      className="jsx-665481332 googleButton"
    >
      <Button
        Facebook={true}
        Icon={[Function]}
        block={false}
        disabled={false}
        loading={false}
        onClick={[Function]}
        onlyIcon={false}
        size="normal"
        title="Continue with Google"
        type="google"
        variation="bordered"
        width={212}
      />
    </div>
    <Button
      Facebook={true}
      Icon={[Function]}
      block={false}
      className="facebook"
      disabled={false}
      loading={false}
      onClick={[Function]}
      onlyIcon={false}
      size="normal"
      title="Continue with Facebook"
      type="facebook"
      variation="filled"
      width={212}
    />
  </div>
  <div
    className="jsx-665481332 kiwi-account"
  >
    <Link
      replace={false}
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/kiwi-login"
    >
      <Typography
        type="active"
      >
        I want to use my Kiwi.com account
      </Typography>
      <img
        alt="kiwi login"
        className="jsx-665481332 chevron"
        src="https://images.kiwi.com/smart-faq/chevron-right.png"
      />
    </Link>
  </div>
  <JSXStyle
    css=".SignIn.jsx-665481332{width:480px;padding-top:128px;padding-bottom:50px;}div.picture.jsx-665481332 img.jsx-665481332{width:203px;height:156px;}div.picture.jsx-665481332{margin:0px 127px 0px 150px;}div.text.jsx-665481332{margin:68px 40px 32.8px 40px;}.title.jsx-665481332{margin-bottom:8px;}.googleButton.jsx-665481332{margin-bottom:16px;}.buttons.jsx-665481332{margin-right:134px;margin-left:134px;margin-bottom:24px;}div.kiwi-account.jsx-665481332{margin-top:8px;text-align:center;}img.chevron.jsx-665481332{width:8px;height:8px;margin-left:5px;object-fit:contain;}@media only screen and (min-width:320px) and (max-width:480px){.SignIn.jsx-665481332{width:100%;padding-top:22px;}div.picture.jsx-665481332 img.jsx-665481332{display:none;}div.text.jsx-665481332{margin:64px 16px 33px 16px;}.buttons.jsx-665481332{margin-right:16px;margin-left:16px;}button.jsx-665481332{width:100%;margin-bottom:20px;}@media only screen and (width:320px){.SignIn.jsx-665481332{padding-top:0px;}}}"
    styleId="665481332"
  />
</div>
`;
